force-app/main/default/objects/cgc_sync__Sync_ID_Mapping__c/cgc_sync__Sync_ID_Mapping__c.object-meta.xml
<CustomObject>
    <description>This table contains information about mappings of local mobile application ids to salesforce ids.</description>
    <label>Salesforce and Mobile App ID Mapping</label>
    <nameField>
        <displayFormat>SIM-{00000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce and Mobile App ID Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>