force-app/main/default/objects/cgc_sync__Sync_ID_Mapping__c/fields/cgc_sync__Device_Id__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Device_Id__c</fullName>
    <description>Installation ID of the device.</description>
    <label>Device Id</label>
    <length>45</length>
    <type>Text</type>
</CustomField>