force-app/main/default/objects/cgc_sync__Sync_ID_Mapping__c/fields/cgc_sync__Local_Id__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Local_Id__c</fullName>
    <description>Locally generate primary key ID of the device.</description>
    <label>Local Id</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>