force-app/main/default/objects/cgc_sync__Sync_ID_Mapping__c/fields/cgc_sync__Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Salesforce_Id__c</fullName>
    <description>Mapped Salesforce ID of the device.</description>
    <label>Salesforce Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>